--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@
 *.iml
 *.swp
 src/main/resources/spark/template/freemarker/oldsignin.ftl
+src/main/resources/spark/template/freemarker/game2.ftl
+src/main/resources/spark/template/freemarker/old.ftl
 src/main/resources/spark/template/freemarker/sign_up.ftl
